# debt_overview

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  run-analysis.yml
output/: README.md  chart_1_chart_test_small.json  chart_3_chart.csv  chart_3_download.csv  chart_5_chart.csv  chart_5_download.csv  key_stats.json
raw_data/: README.md
scripts/: config.py  example_analysis.py  logger.py  utils.py
scripts/analysis/: charts.py  get_raw_data.py
