[project]
name = "debt_overview"
version = "0.1.0"
description = "Sovereign debt overview page"

authors = [
  { name = "Luca Picci", email = "lpicci96@gmail.com" }
]

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bblocks-data-importers",
    "bblocks-places>=0.0.4",
    "black>=25.12.0",
    "notebook>=7.4.7",
]




[dependency-groups]
dev = [

    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    "htmlcov",
]

[tool.ruff.lint]
select = [
    "E", "W", "F",      # pycodestyle, pyflakes
    "I",                 # isort
    "N",                 # pep8-naming
    "UP",                # pyupgrade
    "B",                 # bugbear
    "C4",                # comprehensions
    "SIM",               # simplify
    "PL",                # pylint
    "RUF",               # ruff-specific
    "ERA",               # commented code
    "PERF",              # performance
]

ignore = [
    "E501",    # Line length (formatter handles)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic values
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Use spaces for indentation
indent-style = "space"

# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false

# Like Black, automatically detect line endings
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

files = ["scripts/"]

[tool.uv.sources]
bblocks-data-importers = { git = "https://github.com/ONEcampaign/bblocks_data_importers" }



